fix: align properties and variables side panel headers
Closes https://github.com/camunda/camunda-modeler/issues/5752

--- a/client/src/app/tabs/cloud-bpmn/variables-side-panel/VariablesSidePanel.less
+++ b/client/src/app/tabs/cloud-bpmn/variables-side-panel/VariablesSidePanel.less
@@ -93,5 +93,9 @@
       bottom: 0;
       left: 0;
     }
+
+    .bio-vo-search-container {
+      height: 64px;
+    }
   }
 }
